# all-weather-portfolio

./: .gitignore  BACKTEST_RESULTS.md  CLAUDE.md  CLAUDE.template.md  LICENSE  PROJECT_HISTORY.md  README-zh.md  README.md  README.template.md  commit.md  diagnose_drag.py  experiments.jsonl  inspect_data.py  main.py  overfit_analysis.py  pyproject.toml  rebalance_now.py  update_and_run.py  update_data.py  us_backtest.py  架构参考.md  桥水全季节.docx  桥水全季节.html  梗概.md  策略参考.md  项目.md
.claude/: settings.local.json
allweather/: __init__.py  backtest.py  charts.py  config.py  data.py  excel_export.py  experiment_log.py  explore_improvements.py  fetch.py  grid_search_b.py  markdown_report.py  pipeline.py  portfolios.py  rebalance.py  reports.py  risk.py  stats.py  strategy_a.py  strategy_b.py  strategy_c.py  update_docs.py
data/: bond_10y_etf.csv  bond_30y_etf.csv  bond_credit.csv  bond_short.csv  cb_10y_idx.csv  cgb_yields.csv  cgb_yields_full.csv  copper.csv  credit_idx.csv  csi1000.csv  csi500.csv  csiA500.csv  csi_energy.csv  div_idx_src.csv  div_lowvol.csv  div_lv100.csv  energy_chem.csv  gem.csv  gem50.csv  gold.csv  gold_stock.csv  hk_div.csv  hk_div_soe.csv  hs300.csv  hs300_idx.csv  hs300_pb.csv  hs300_pe.csv  london_gold.csv  metal_stock.csv  nasdaq.csv  nikkei.csv  nonferr.csv  nonferr_idx.csv  policy_bank.csv  rebalance_state.json  shfe_copper.csv  soymeal.csv  soymeal_fut.csv  sp500_idx.csv  treasury_idx.csv  (+4 more)
docs/: data.json  index.html  strategy-paper.md
experiments/: postprocess_weights.py  sp500_ablation.py  turnover_smoothing.py  v3c_plus.py  v3c_wti.py
(+32 files in other folders)
